# CMake-WASM-Example

./: CMakeLists.txt  README.md  compile.sh
src/: main_threads.c
